# GUV-detect

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_all.sh
calibration_out/: fitted_config.yaml  fitted_params.json
configs/: calibration.yaml  calibration_smoke.yaml  dataset.yaml  eval.yaml  sim_default.yaml  train.yaml
data/: S.G. GUV DOPC DIL GLUCOSE 3 hr Image 1 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 10 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 11 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 12 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 13 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 14 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 15 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 16 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 17 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 18 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 19 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 2 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 20 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 21 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 22 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 24 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 25 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 3 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 4 5-28-2026 Trial 3.tif  S.G. GUV DOPC DIL GLUCOSE 3 hr Image 5 5-28-2026 Trial 3.tif  (+4 more)
(+35 files in other folders)
