[project]
name = "guv-detect"
version = "0.1.0"
description = "Physics-based forward simulator and CenterNet-style detector for GUVs (giant unilamellar vesicles) in confocal fluorescence microscopy images."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "tifffile>=2023.7",
    "optuna>=3.5",
    "torch>=2.1",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
